# DevToolbox

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  angular.json  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  generate-release.yml
dev-core-tools-scaffold/: README.md  angular.json  package.json
dev-core-tools-scaffold/src/: index.html
dev-core-tools-scaffold/src/app/: app.component.ts
devtoolbox/: README.md  angular.json  package.json
devtoolbox/src/: index.html
devtoolbox/src/app/: app.component.ts
src/: index.html  styles.css  tauri-plugin-autostart.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: crypto.rs  dotnet.rs  image.rs  mod.rs  nuget.rs  system.rs
src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
src/app/core/: icon.component.ts  tool-catalog.ts
src/app/core/guards/: welcome.guard.ts
src/app/core/i18n/: en-GB.ts  es-ES.ts  fr-FR.ts  i18n-dom.service.ts  i18n.pipe.ts  i18n.service.ts  i18n.types.ts  ru-RU.ts  zh-CN.ts
src/app/core/services/: history.service.ts  pinned.service.ts  search.service.ts  settings.service.ts  toast.service.ts  update-check.service.ts
src/app/layout/command-palette/: command-palette.component.ts
src/app/layout/shell/: shell.component.ts
src/app/layout/sidebar/: sidebar.component.ts
src/app/layout/toast/: toast-container.component.ts
src/app/layout/topbar/: topbar.component.ts
src/app/layout/window-controls/: window-controls.component.ts
src/app/pages/about/: about.component.ts
src/app/pages/first-run/: first-run.component.ts
src/app/pages/history/: history.component.ts
src/app/pages/home/: home.component.ts
src/app/pages/settings/: settings.component.ts
src/app/shared/: nav.ts
src/app/tools/aes/: aes.component.ts
src/app/tools/base-converter/: base-converter.component.ts
src/app/tools/base64/: base64.component.ts
src/app/tools/bcrypt/: bcrypt.component.ts
src/app/tools/bitwise/: bitwise.component.ts
src/app/tools/cert-decoder/: cert-decoder.component.ts
src/app/tools/color-palette/: color-palette.component.ts
src/app/tools/color-tools/: color-tools.component.ts
src/app/tools/cron/: cron.component.ts
src/app/tools/csv-json/: csv-json.component.ts
src/app/tools/curl-to-code/: curl-to-code.component.ts
src/app/tools/datetime-util/: datetime-util.component.ts
src/app/tools/diff/: diff.component.ts
src/app/tools/dll-inspector/: dll-inspector.component.ts
src/app/tools/hash/: hash.component.ts
src/app/tools/hex/: hex.component.ts
src/app/tools/hmac/: hmac.component.ts
src/app/tools/html-entities/: html-entities.component.ts
src/app/tools/http-status/: http-status.component.ts
src/app/tools/img-converter/: img-converter.component.ts
src/app/tools/img-cropper/: img-cropper.component.ts
(+32 files in other folders)
