[package]
name = "dev-core-tools"
version = "1.0.6"
description = "Dev Core Tools — 30 local-first developer tools, one window."
authors = ["Dev Core Tools Contributors"]
license = "MIT"
repository = "https://github.com/yourname/dev-core-tools"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dev_core_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image processing
image = { version = "0.25", features = ["png", "jpeg", "webp", "avif"] }

# Crypto
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
crc32fast = "1"
hmac = "0.12"
bcrypt = "0.15"
hex = "0.4"

# Async
tokio = { version = "1", features = ["full"] }

# HTTP (NuGet API)
reqwest  = { version = "0.12", features = ["json", "native-tls"] }
futures  = "0.3"
thiserror = "2.0.18"

[profile.release]
panic = "abort"  # Strip expensive panic clean-up logic
codegen-units = 1
lto = true
opt-level = "s"
